# YatSenOS2

src/0x00/pkg/boot/src/: main.rs
src/0x01/: .gdbinit  Cargo.toml  boot_asm.txt  objdump_kernel.txt  readelf.txt  readelf_segments.txt  test.typ
src/0x01/pkg/app/.cargo/: config.toml
src/0x01/pkg/app/dinner/: Cargo.toml
src/0x01/pkg/app/dinner/src/: main.rs
src/0x01/pkg/app/fab/: Cargo.toml
src/0x01/pkg/app/sh/: Cargo.toml
src/0x01/pkg/app/sh/src/: main.rs
src/0x01/pkg/boot/.cargo/: config.toml
src/0x01/pkg/boot/src/: allocator.rs  config.rs  fs.rs  lib.rs  main.rs
src/0x01/pkg/elf/src/: lib.rs
src/0x01/pkg/kernel/: Cargo.toml
src/0x01/pkg/kernel/.cargo/: config.toml
src/0x01/pkg/kernel/config/: boot.conf
src/0x01/pkg/kernel/src/: lib.rs  main.rs
src/0x01/pkg/kernel/src/drivers/: input.rs  mod.rs  serial.rs  uart16550.rs
src/0x01/pkg/kernel/src/interrupt/: clock.rs  exceptions.rs  serial.rs
src/0x01/pkg/kernel/src/interrupt/syscall/: mod.rs  service.rs
src/0x01/pkg/kernel/src/memory/: frames.rs  gdt.rs  mod.rs  user.rs
src/0x01/pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  processor.rs  sync.rs
src/0x01/pkg/kernel/src/proc/vm/: heap.rs  mod.rs  stack.rs
src/0x01/pkg/kernel/src/utils/: logger.rs  macros.rs  mod.rs
src/0x01/pkg/lib/src/: io.rs  lib.rs  macros.rs  sync.rs  syscall.rs
src/0x02/: Cargo.toml
src/0x02/pkg/boot/src/: main.rs
src/0x02/pkg/kernel/: Cargo.toml
src/0x02/pkg/kernel/src/: lib.rs  main.rs
src/0x02/pkg/kernel/src/drivers/: input.rs  mod.rs  serial.rs  uart16550.rs
src/0x02/pkg/kernel/src/interrupt/: clock.rs  consts.rs  exceptions.rs  mod.rs  serial.rs
src/0x02/pkg/kernel/src/memory/: gdt.rs
src/0x02/pkg/kernel/src/utils/: logger.rs  macros.rs  mod.rs
src/0x03/: Cargo.toml
src/0x03/pkg/boot/src/: config.rs  lib.rs  main.rs
src/0x03/pkg/kernel/: Cargo.toml
src/0x03/pkg/kernel/src/: lib.rs  main.rs
src/0x03/pkg/kernel/src/drivers/: input.rs  uart16550.rs
src/0x03/pkg/kernel/src/interrupt/: clock.rs  exceptions.rs  mod.rs  serial.rs
src/0x03/pkg/kernel/src/interrupt/apic/: xapic.rs
src/0x03/pkg/kernel/src/memory/: frames.rs  gdt.rs  mod.rs
src/0x03/pkg/kernel/src/proc/: context.rs  data.rs  manager.rs  mod.rs  paging.rs  pid.rs  process.rs  processor.rs
src/0x03/pkg/kernel/src/proc/vm/: mod.rs  stack.rs
src/0x03/pkg/kernel/src/utils/: func.rs  logger.rs  mod.rs
src/0x04/: Cargo.toml
src/0x04/pkg/app/hello/src/: main.rs
src/0x04/pkg/app/sh/src/: main.rs
src/0x04/pkg/boot/src/: main.rs
src/0x04/pkg/elf/src/: lib.rs
src/0x04/pkg/kernel/src/: main.rs
src/0x04/pkg/lib/src/: io.rs
src/0x05/: rust-toolchain.toml
src/0x05/pkg/app/dinner/: Cargo.toml
src/0x05/pkg/app/sh/: Cargo.toml
src/0x05/pkg/boot/src/: lib.rs  main.rs
src/0x05/pkg/elf/src/: lib.rs
src/0x05/pkg/kernel/config/: boot.conf
src/0x05/pkg/kernel/src/: lib.rs  main.rs
src/0x05/pkg/lib/src/: io.rs  lib.rs  macros.rs  sync.rs  syscall.rs
src/0x05/pkg/syscall/src/: lib.rs
src/0x07/pkg/app/hello/: Cargo.toml
src/0x07/pkg/boot/src/: fs.rs  lib.rs  main.rs
src/0x07/pkg/elf/src/: lib.rs
src/0x07/pkg/kernel/src/: lib.rs
src/0x07/pkg/lib/src/: syscall.rs
src/0x07/pkg/syscall/src/: lib.rs
(+56 files in other folders)
