[workspace]
resolver = "2"
members = [
    "pkg/elf",
    "pkg/boot",
    "pkg/kernel"
]
exclude = ["pkg/app/config", "pkg/app/.cargo"]

[workspace.package]
version = "0.1.0"
edition = "2024"

[profile.release-with-debug]
inherits = "release"
debug = true

[profile.release-with-debug.package."*"]
debug = false

[workspace.dependencies]
# NOTE: Remove or add dependencies here if you need
#       This list is copied from final project
paste = "1.0"
spin = "0.10"
x86 = "0.52"
x86_64 = "0.15"
log = "0.4"
bitflags = "2.6"
libm = "0.2.15"
xmas-elf = "0.10"
arrayvec = { version = "0.7", default-features = false }
uefi = { version = "0.34", default-features = false, features = [] }
lazy_static = { version = "1.4", features = ["spin_no_std"] }

# Local dependencies

elf = { path = "pkg/elf", package = "ysos_elf" }
boot = { path = "pkg/boot", default-features = false, package = "ysos_boot" }
