[package]
name = "ysos_kernel"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[package.metadata.linker]
script = "pkg/kernel/config/kernel.ld"

[dependencies]
boot = { workspace = true }
uefi = { workspace = true, default-features = false }
paste = { workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
libm = { workspace = true }
