[package]
name = "ysos_kernel"
version.workspace = true
edition.workspace = true
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
boot = { workspace = true } # 在kernel中能够调用boot
elf = { workspace = true } # 在kernel中能够调用elf
lazy_static = { workspace = true }
uefi = { workspace = true }
paste = { workspace = true }
spin = { workspace = true }
x86 = { workspace = true }
x86_64 = { workspace = true }
log = { workspace = true }
bitflags = { workspace = true }
bit_field = { workspace = true }
libm = { workspace = true }
linked_list_allocator = { workspace = true }
volatile = { workspace = true, version = "0.6.1" }
crossbeam-queue = { workspace = true, version = "0.3", default-features = false, features = ["alloc"] }
pc-keyboard = "0.8.0"
